--- a/Rad/Rad.WindowsPhone/OptionsPage.xaml
+++ b/Rad/Rad.WindowsPhone/OptionsPage.xaml
@@ -37,7 +37,7 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <RadioButton x:Name="CountryRadioButton1" Grid.Column="0" Content="Canada" GroupName="CountryBoxes" IsChecked="True"/>
+                    <RadioButton x:Name="CountryRadioButton1" Grid.Column="0" Content="Canada" GroupName="CountryBoxes" />
                     <RadioButton x:Name="CountryRadioButton2" Grid.Column="1" Content="USA" GroupName="CountryBoxes" />
                 </Grid>
                 <ComboBox x:Name="ProvinceComboBox" Padding="0,0,27,0" Width="auto" SelectionChanged="ProvinceComboBox_SelectionChanged" SelectedIndex="0">
@@ -53,13 +53,13 @@
                 </ComboBox>
                 <ComboBox x:Name="StationComboBox" />
 
-                <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Radar Product" Margin="0,24,0,0"/>
+                <TextBlock Style="{StaticResource TitleTextBlockStyle}" x:Name="ProductName" Text="Radar Product" Margin="0,24,0,0"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <RadioButton x:Name="ProductRadioButton2" Grid.Column="0" Content="CAPPI" GroupName="ProductBoxes" IsChecked="True"/>
+                    <RadioButton x:Name="ProductRadioButton2" Grid.Column="0" Content="CAPPI" GroupName="ProductBoxes" />
                     <RadioButton x:Name="ProductRadioButton1" Grid.Column="1" Content="PRECIPET" GroupName="ProductBoxes" />
                 </Grid>
 
@@ -70,7 +70,7 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <RadioButton x:Name="PrecipitationRadioButton1" Grid.Column="0" Content="Rain" GroupName="PrecipitationBoxes" />
-                    <RadioButton x:Name="PrecipitationRadioButton2" Grid.Column="1" Content="Snow" GroupName="PrecipitationBoxes" IsChecked="True"/>
+                    <RadioButton x:Name="PrecipitationRadioButton2" Grid.Column="1" Content="Snow" GroupName="PrecipitationBoxes" />
 
                 </Grid>
 
@@ -84,9 +84,9 @@
                         <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <CheckBox x:Name="CityCheckBox" Grid.Column="0" Grid.Row="0" Content="Cities" IsChecked="True"/>
+                    <CheckBox x:Name="CityCheckBox" Grid.Column="0" Grid.Row="0" Content="Cities" />
                     <CheckBox x:Name="RadarCircleCheckBox" Grid.Column="1" Grid.Row="0" Content="Radar Circles"  />
-                    <CheckBox x:Name="RoadCheckBox" Grid.Column="0" Grid.Row="1" Content="Roads" IsChecked="True" />
+                    <CheckBox x:Name="RoadCheckBox" Grid.Column="0" Grid.Row="1" Content="Roads"  />
                     <CheckBox x:Name="RoadNoCheckBox" Grid.Column="1" Grid.Row="1" Content="Road Numbers" />
                 </Grid>
 
@@ -96,7 +96,7 @@
                         <ColumnDefinition />
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <RadioButton x:Name="DurationRadioButton1" Grid.Column="0" Content="1 hr" GroupName="DurationBoxes" IsChecked="True"/>
+                    <RadioButton x:Name="DurationRadioButton1" Grid.Column="0" Content="1 hr" GroupName="DurationBoxes" />
                     <RadioButton x:Name="DurationRadioButton2" Grid.Column="1" Content="3 hr" GroupName="DurationBoxes"/>
                 </Grid>
 
@@ -108,7 +108,7 @@
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <RadioButton x:Name="LoopTimerRadioButton1" Grid.Column="0" Content="0.1 sec" GroupName="LoopTimerBoxes"/>
-                    <RadioButton x:Name="LoopTimerRadioButton2" Grid.Column="1" Content="0.5 sec" GroupName="LoopTimerBoxes" IsChecked="True"/>
+                    <RadioButton x:Name="LoopTimerRadioButton2" Grid.Column="1" Content="0.5 sec" GroupName="LoopTimerBoxes" />
                     <RadioButton x:Name="LoopTimerRadioButton3" Grid.Column="2" Content="1 sec" GroupName="LoopTimerBoxes"/>
                 </Grid>
             </StackPanel>
