Major UI Changes
Added Help page. Changed text in About page.

--- a/Rad/Rad.Windows/AboutPage.xaml
+++ b/Rad/Rad.Windows/AboutPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     IconSource="Assets/SmallLogo.png"
     Title="About"
-    d:DesignWidth="346" RequestedTheme="Light" HeaderBackground="#FF006738">
+    d:DesignWidth="346" RequestedTheme="Light">
 
     <!-- This StackPanel acts as a root panel for vertical layout of the content sections -->
     <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" >
@@ -21,26 +21,35 @@
             <!-- Section 1 header -->
 
             <!-- Section 1 body -->
-            <RichTextBlock x:Name="AboutPageTextBlock" Style="{StaticResource BaseRichTextBlockStyle}" Margin="0,0,0,25" TextWrapping="Wrap" >
+            <RichTextBlock Style="{StaticResource BodyRichTextBlockStyle}">
                 <Paragraph>
-                    <Run Text="The Radar Imagery app provides a quick source of advanced weather information for mobile users on the go."/>
+                    The Radar Imagery app is one of a series of weather apps created by Scirocco Software based out of Vancouver, Canada.
                     <LineBreak/>
+                </Paragraph>
+                <Paragraph>
+                    Our goal is to create lightweight apps that provide a quick source of advanced weather information for mobile users on the go in North America.
                     <LineBreak/>
-                    <Run Text="All data are from Environment Canada (EC). The app makes no attempt to ensure the quality and accuracy of the data."/>
+                </Paragraph>
+                <Paragraph>
+                    All data are from Environment Canada (EC) and the National Weather Service (NWS).
+                    The app makes no attempt to ensure the quality and accuracy of the data.
                     <LineBreak/>
+                </Paragraph>
+                <Paragraph>
+                    The internet connection of the device is used to access data. 
+                    No information about the user or the device is collected, stored, or shared.
                     <LineBreak/>
-                    <Run Text="The internet connection of the phone is used to access data. No information about the user or the phone is collected, stored, or shared."/>
+                </Paragraph>
+                <Paragraph>
+                    We would love to hear your feedback on the app. If you have any questions, comments, or suggestions, please send an email to
+                    <Hyperlink Click="HyperLink_onClick">
+                        scirocco_sw@outlook.com
+                    </Hyperlink>.
                     <LineBreak/>
-                    <LineBreak/>
-                    <Run Text="We would love to hear your feedback on the app. If you have any questions, comments, or suggestions, please send an email to "/>
-                    <Hyperlink Click="HyperLink_onClick">scirocco_sw@outlook.com</Hyperlink>
-                    <Run Text="."/>
                 </Paragraph>
             </RichTextBlock>
-
         </StackPanel>
         
-
         <!-- Define more Content Sections below as necessary -->
 
     </StackPanel>
