--- a/Rad/Rad.Windows/AboutPage.xaml
+++ b/Rad/Rad.Windows/AboutPage.xaml
@@ -16,41 +16,11 @@
         <!-- The StackPanel(s) below define individual content sections -->
 
         <!-- Content Section 1-->
-        <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}">
-
+        <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}" xmlns:src="using:Rad">
             <!-- Section 1 header -->
-
             <!-- Section 1 body -->
-            <RichTextBlock Style="{StaticResource BodyRichTextBlockStyle}">
-                <Paragraph>
-                    The Radar Imagery app is one of a series of weather apps created by Scirocco Software based out of Vancouver, Canada.
-                    <LineBreak/>
-                </Paragraph>
-                <Paragraph>
-                    Our goal is to create lightweight apps that provide a quick source of advanced weather information for mobile users on the go in North America.
-                    <LineBreak/>
-                </Paragraph>
-                <Paragraph>
-                    All data are from Environment Canada (EC) and the National Weather Service (NWS).
-                    The app makes no attempt to ensure the quality and accuracy of the data.
-                    <LineBreak/>
-                </Paragraph>
-                <Paragraph>
-                    The internet connection of the device is used to access data. 
-                    No information about the user or the device is collected, stored, or shared.
-                    <LineBreak/>
-                </Paragraph>
-                <Paragraph>
-                    We would love to hear your feedback on the app. If you have any questions, comments, or suggestions, please send an email to
-                    <Hyperlink Click="HyperLink_onClick">
-                        scirocco_sw@outlook.com
-                    </Hyperlink>.
-                    <LineBreak/>
-                </Paragraph>
-            </RichTextBlock>
+            <src:AboutText/>
         </StackPanel>
-        
-        <!-- Define more Content Sections below as necessary -->
-
+            <!-- Define more Content Sections below as necessary -->
     </StackPanel>
 </SettingsFlyout>
