--- a/Rad/Rad.Windows/HelpPage.xaml
+++ b/Rad/Rad.Windows/HelpPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     IconSource="Assets/SmallLogo.png"
     Title="Help"
-    d:DesignWidth="346">
+    d:DesignWidth="346" HeaderBackground="#006738">
 
     <!-- This StackPanel acts as a root panel for vertical layout of the content sections -->
     <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" >
