--- a/Rad/Rad.Windows/OptionsPage.xaml
+++ b/Rad/Rad.Windows/OptionsPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     IconSource="Assets/SmallLogo.png"
     Title="Options"
-    d:DesignWidth="346" Unloaded="OptionsPage_Unloaded" Loaded="OptionsPage_Loaded">
+    d:DesignWidth="346" Unloaded="OptionsPage_Unloaded" Loaded="OptionsPage_Loaded" HeaderBackground="#006738">
 
     <!-- This StackPanel acts as a root panel for vertical layout of the content sections -->
     <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Width="265" >
